added login and register api
